ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: choosepath-ing
  namespace: choosepath
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service-healthcheck-path: /api/health/liveness
    traefik.ingress.kubernetes.io/service-healthcheck-interval: 10s
spec:
  rules:
    - host: choosepath.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  name: 80-tcp
          - path: /api/user-info
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  name: 80-tcp
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  name: 80-tcp
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  name: 80-tcp
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  name: 80-tcp
  tls:
    - hosts:
        - choosepath.org
      secretName: prod-choosepath-org-tls
